ingress/ingress-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-react-ingress
  annotations:
    nginx.ingress.k8s.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: node-react.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-frontend-service
            port:
              number: 80

      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-backend-service
            port:
              number: 8081
